force-app/main/default/objects/Rental_Item__c/Rental_Item__c.object-meta.xml
<CustomObject>
    <description>Junction object between Rental and Camping Item</description>
    <label>Rental Item</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Rental Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>