force-app/main/default/objects/Rental_Item__c/fields/Camping_Item__c.field-meta.xml
<CustomField>
    <fullName>Camping_Item__c</fullName>
    <description>Camping item being rented</description>
    <label>Camping Item</label>
    <referenceTo>Camping_Item__c</referenceTo>
    <relationshipLabel>Rental Items</relationshipLabel>
    <relationshipName>Rental_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>