force-app/main/default/objects/Rental_Item__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <description>Rental this item is part of</description>
    <label>Rental</label>
    <referenceTo>Rental__c</referenceTo>
    <relationshipLabel>Rental Items</relationshipLabel>
    <relationshipName>Rental_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>